Checking fonts issue on iOS

--- a/css/testcss.css
+++ b/css/testcss.css
@@ -1,7 +1,5 @@
 * { margin:0; padding:0; box-sizing:border-box; }
 
-@import url('https://fonts.googleapis.com/css?family=Lato');
-
 .hero_container {
     height: 360px;
     width: 100%;
@@ -9,9 +7,10 @@
     display: flex;
     justify-content: center;
     background-image: url('../assets/hero.jpg');
+    background-size:cover;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    max-height:100%;
-    max-width:100%;
 }
 
 .hero_text_container {
@@ -23,13 +22,13 @@
 
 .hero_text_container h1 {
     font-size: 64px;
-    font-weight: 800;
+    font-weight: 900;
     
 }
 
 .hero_text_container h3 {
     font-size: 20px;
-    font-weight: 800;
+    font-weight: 900;
     
 }
 
@@ -57,7 +56,7 @@
 }
 
 .destinations-text-container h2 {
-    font-weight: 800;
+    font-weight: 900;
     font-size: 36px;
 }
 
